--- a/hantt/ansible/install-nginx.yml
+++ b/hantt/ansible/install-nginx.yml
@@ -9,9 +9,12 @@
         state: latest
         update_cache: yes
 
-    - name: Install NGINX
+    - name: Install NGINX and Python3
       yum:
-        name: nginx
+        name:
+          - nginx
+          - python3
+          - python3-pip
         state: present
 
     - name: Start and enable NGINX service
