--- a/hantt/ansible/install-nginx.yml
+++ b/hantt/ansible/install-nginx.yml
@@ -9,12 +9,13 @@
         state: latest
         update_cache: yes
 
+    - name: Try to install Python 3.8 via amazon-linux-extras
+      shell: amazon-linux-extras install python3.8 -y
+
     - name: Install NGINX and Python3
       yum:
         name:
           - nginx
-          - python3
-          - python3-pip
         state: present
 
     - name: Start and enable NGINX service
