Fix attempt - Could not detect which major revision of dnf is in use, which is required to determine module backend

--- a/hantt/ansible/install-nginx.yml
+++ b/hantt/ansible/install-nginx.yml
@@ -3,11 +3,8 @@
   become: yes
   
   tasks:
-    - name: Install NGINX and Python3
-      yum:
-        name:
-          - nginx
-        state: present
+    - name: Install NGINX
+      shell: amazon-linux-extras install nginx1 -y
 
     - name: Start and enable NGINX service
       systemd:
