--- a/hantt/ansible/ec2.ini
+++ b/hantt/ansible/ec2.ini
@@ -1,5 +1,5 @@
 [ec2_servers]
-nginx-server ansible_host=${EC2_IP} ansible_user=ec2-user ansible_ssh_private_key_file=../practice-key-pair.pem
+nginx-server ansible_host=${EC2_IP} ansible_user=ec2-user ansible_ssh_private_key_file=../practice-ec2-key-pair.pem
 
 [ec2_servers:vars]
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
