Enable https with self-signed certificate in nginx.

--- a/hantt/ansible/install-nginx.yml
+++ b/hantt/ansible/install-nginx.yml
@@ -26,7 +26,84 @@
         immediate: yes
       when: firewalld_status.stdout == "active"
 
+    - name: Open HTTPS port in firewall
+      firewalld:
+        service: https
+        permanent: yes
+        state: enabled
+        immediate: yes
+      when: firewalld_status.stdout == "active"
+
+    - name: Generate simple self-signed SSL certificate
+      shell: |
+        openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+        -keyout /etc/ssl/private/nginx-selfsigned.key \
+        -out /etc/ssl/certs/nginx-selfsigned.crt \
+        -subj "/C=US/ST=State/L=City/O=Organization/CN={{ ansible_host }}"
+      args:
+        creates: /etc/ssl/certs/nginx-selfsigned.crt
+    
+    - name: Create NGINX HTTPS configuration with redirect
+      copy:
+        content: |
+          # Redirect HTTP to HTTPS
+          server {
+              listen 80;
+              server_name {{ ansible_host }};
+              return 301 https://$server_name$request_uri;
+          }
+
+          # HTTPS server
+          server {
+              listen 443 ssl;
+              server_name {{ ansible_host }};
+
+              # SSL configuration
+              ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+              ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+              
+              # Minimal security settings
+              ssl_protocols TLSv1.2 TLSv1.3;
+              ssl_prefer_server_ciphers on;
+              
+              # Basic security headers
+              add_header Strict-Transport-Security "max-age=31536000";
+              add_header X-Frame-Options DENY;
+              add_header X-Content-Type-Options nosniff;
+
+              root /usr/share/nginx/html;
+              index index.html;
+
+              location / {
+                  try_files $uri $uri/ =404;
+              }
+          }
+        dest: /etc/nginx/conf.d/default.conf
+        backup: yes
+      notify: restart nginx
+
+    - name: Test NGINX configuration
+      command: nginx -t
+      register: nginx_test
+      failed_when: nginx_test.rc != 0
+
+    - name: Restart NGINX to apply changes
+      systemd:
+        name: nginx
+        state: restarted
+
+    - name: Wait for NGINX to start
+      wait_for:
+        port: 443
+        delay: 2
+
     - name: Display success message
       debug:
         msg:
-          - "url: http://{{ ansible_host }}"
+          - "url: https://{{ ansible_host }}"
+
+  handlers:
+    - name: restart nginx
+      systemd:
+        name: nginx
+        state: restarted
